--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -18,8 +18,8 @@ service:
 ingress:
   enabled: true
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+     kubernetes.io/ingress.class: nginx
+     kubernetes.io/tls-acme: "false"
   path: /
   hosts:
     - chart-example.local
