--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -17,7 +17,7 @@ service:
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations: {nginx.ingress.kubernetes.io/rewrite-target: /$1}
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "false"
   path: /
