--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -17,10 +17,10 @@ service:
 
 ingress:
   enabled: true
-  annotations:
-     nginx.ingress.kubernetes.io/rewrite-target: /$1
-     kubernetes.io/ingress.class: nginx
-     kubernetes.io/tls-acme: "false"
+ # annotations:
+ #    nginx.ingress.kubernetes.io/rewrite-target: /$1
+ #    kubernetes.io/ingress.class: nginx
+ #    kubernetes.io/tls-acme: "false"
   path: /
   hosts:
     - chart-example.local
